# NiftyOptionsStrategyExperiment

./: .gitignore  LICENSE  Makefile  README.md  cookies.txt  pyproject.toml  test_poetry_project.code-workspace
data/raw/: nifty_historic.csv
notebooks/: BasicEDANotebook.ipynb  DataImportNotebook.ipynb  DatasetNotebook.ipynb  NSEDataDownload.ipynb  NSEDataNifty60Dte.ipynb  NSEDataNiftyExpMv60Dte.ipynb  NSEDataNiftyTradeSignals.ipynb  NSEDataNiftyTradeSignals60Dte400PWings.ipynb  UnofficedCodeSnippets.ipynb  cookies.txt
plots/: NiftyBacktestingTradeSignals.html
