[tool.poetry]
name = "test_poetry_project"
version = "0.1.0"
description = ""
authors = ["Shankar Narayanan G R"]

[tool.poetry.dependencies]
python = "^3.9"
dvc = "^2.10.0"
hydra-core = "^1.1.1"
pdoc3 = "^0.10.0"
numpy = "^1.26.2"
pandas = "^2.1.3"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
datetime = "^5.3"
scikit-learn = "^1.3.2"
xgboost = "^2.0.2"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
pre-commit = "^2.17.0"

[tool.poetry.group.DesktopEnvDep.dependencies]
jupyterlab = "^3"
jupyterlab-git = "^0.44.0"
nsepython = "^2.8"
isort = "^5.13.2"
black = "^23.12.0"

[tool.poetry.group.ColabEnvDep.dependencies]
nsepythonserver = "^2.7"
black = {extras = ["jupyter"], version = "^23.12.0"}

[tool.poetry.group.AsmslEnvDep.dependencies]
nsepythonserver = "^2.7"
isort = "^5.13.2"
black = "^23.12.0"
jupyterlab-code-formatter = "2.*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E501"]
select = ["B","C","E","F","W","B9", "I", "Q"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

[tool.ruff.mccabe]
max-complexity = 10
